# haoma-reincarnated

./: .gitignore  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
backend/: .gitignore  Makefile  go.mod  go.sum
backend/cmd/haomactl-dumpstore/: main.go
backend/cmd/haomactl-pair/: main.go
backend/cmd/haomad/: api.go  api_rotate.go  api_rotate_test.go  api_test.go  circuit.go  extprobe_run.go  files_api.go  files_api_test.go  hsfetch.go  hsfetch_test.go  inbox.go  main.go  main_test.go  onion_pair_api.go  onion_pair_api_test.go  pair_api.go  pair_cache.go  pair_probe.go  peer_self_probe.go  presence.go  presence_test.go  probe_api.go  proxy_api.go  proxy_api_test.go  rand.go  run.go  runtime_file.go  runtime_file_test.go
backend/cmd/onion-demo/: main.go
backend/cmd/tor-cleanup/: main.go
backend/cmd/tor-diag/: main.go
backend/internal/auth/: auth.go  auth_test.go  tls.go  tls_test.go
backend/internal/cover/: cover_test.go
backend/internal/eventbus/: eventbus.go  eventbus_test.go
backend/internal/extprobe/: prober.go  targets.go
backend/internal/files/: fetch.go  fetch_test.go  fetch_worker.go  files.go  files_test.go
backend/internal/ids/: ids.go  ids_test.go  rules.go
backend/internal/logging/: logging.go  logging_test.go  redact.go
backend/internal/logid/: logid.go  logid_test.go
backend/internal/notif/: notif_test.go
backend/internal/outbox/: migrate.go  migrate_test.go  outbox.go  outbox_test.go
backend/internal/pair/: bip39.go  bip39_test.go  bootstrap.go  crypto.go  crypto_test.go  dht.go  dht_bencode_test.go  dht_test.go  driver.go  effshort.go  effshort_LICENSE.md  effshort_test.go  onion_derive.go  onion_derive_test.go  onion_driver.go  onion_driver_test.go  onion_handshake.go  onion_handshake_test.go
backend/internal/peers/: authenticator.go  authenticator_test.go  invite.go  invite_test.go  peer.go  peers_test.go  registry.go  registry_test.go
backend/internal/proxy/: manager.go  manager_test.go
backend/internal/secrets/: secrets.go  secrets_test.go
backend/internal/signal/: signal_test.go
backend/internal/store/: kdf_test.go  kv.go  kv_test.go  meta.go  meta_test.go  migrate.go  migrate_test.go  store.go  store_test.go
backend/internal/tor/: tor_test.go
backend/internal/xport/: client.go  doc.go  envelope.go  mac.go  mac_test.go  real_test.go  server.go  tor.go  transport_test.go  xport_test.go
docs/: HAOMA-ANDROID.md  HAOMA-TEXT.md  HOWTO-VERIFY.md
frontend/: .gitignore  go.mod  go.sum
frontend/cmd/haoma/: calls_handlers.go  calls_handlers_test.go  calls_orchestrator.go  calls_relay.go  chat_actions.go  chat_defaults.go  chat_defaults_test.go  chat_metrics.go  chat_settings.go  files_cascade.go  files_fetch.go  files_fetch_test.go  files_handshake.go  files_handshake_test.go  files_send.go  files_send_test.go  handlers.go  handlers_files_list_test.go  handlers_open_file_test.go  handlers_rotate.go  handlers_save_file_test.go  handlers_test.go  handlers_tor.go  main.go  main_test.go  notify.go  notify_test.go  peer_fingerprint.go  peer_fingerprint_test.go  presence.go  presence_relay.go  presence_test.go  relay.go  relay_test.go  rotation_wire.go  run.go  settings.go  settings_dialog.go  settings_dialog_test.go
frontend/cmd/haoma-dev-stub/: main.go
frontend/cmd/haoma-drain-opk/: main.go
frontend/cmd/haoma-dumpstore/: main.go
frontend/cmd/haoma-observe/: main.go
frontend/cmd/haoma-text/: main.go  passphrase.go  spawn.go  vaultctl.go  vaultctl_test.go
frontend/cmd/haoma-vault/: main.go  main_test.go
frontend/internal/backendapi/: client.go  client_test.go  events.go  events_test.go  tls.go
frontend/internal/calls/: calls.go  calls_test.go
frontend/internal/chat/: chat.go  chat_test.go
frontend/internal/disguise/: disguise.go  disguise_test.go
frontend/internal/emoji/: data.json  emoji.go  emoji_test.go
frontend/internal/events/: events.go  events_test.go
frontend/internal/files/: files.go  files_test.go  janitor.go  meta.go  mime.go  mime_test.go
frontend/internal/ipc/: auth.go  auth_test.go  frame.go  server.go  session.go  session_test.go  tls.go  tls_test.go
frontend/internal/ipcclient/: client.go  client_test.go
frontend/internal/lockfile/: lockfile.go  lockfile_test.go  lockfile_unix.go  lockfile_windows.go
frontend/internal/logging/: logging.go  logging_test.go  redact.go  rotating.go
frontend/internal/logid/: logid_test.go
frontend/internal/msg/: wrapper.go  wrapper_test.go
frontend/internal/notify/: notify.go  notify_test.go
frontend/internal/pair/: import.go  import_test.go  invite.go  invite_test.go  secret.go  secret_test.go
frontend/internal/paths/: paths.go  paths_test.go
frontend/internal/peerstate/: peerstate.go  peerstate_test.go
frontend/internal/presence/: cache.go  cache_test.go
frontend/internal/rotation/: manager.go  manager_test.go
frontend/internal/secrets/: secrets.go  secrets_test.go
frontend/internal/session/: session.go  session_test.go
frontend/internal/signal/: state.go  state_test.go  stores.go  stores_test.go
frontend/internal/store/: kdf.go  store.go  store_test.go
frontend/internal/streamers/: discover.go  discover_android.go  hkdf.go  (+2 more)
mobile/Android/: .gitignore  Makefile  audit.sh  bootstrap.sh  gradle.properties  settings.gradle.kts
mobile/streams-build/: Makefile  README.md  build.sh  streams-versions.json
mobile/tor-build/: Makefile  README.md  build.sh  tor-versions.json
streams/: CMakeLists.txt  Makefile  smoke.sh
streams/cam/: CMakeLists.txt  main.cpp
streams/common/: aead.cpp  aead.h  control.cpp  control.h  framing.cpp  framing.h  key_fd.cpp  key_fd.h  log.cpp  log.h  socket.cpp  socket.h
streams/mic/: CMakeLists.txt  main.cpp
streams/platform/: audio_android.cpp  audio_backend.h  audio_coreaudio.cpp  audio_pipewire.cpp  audio_wasapi.cpp  video_android.cpp  video_backend.h  video_y4m.cpp
streams/spk/: CMakeLists.txt  main.cpp
streams/test/: CMakeLists.txt  aead_test.cpp  control_test.cpp
streams/vid/: CMakeLists.txt  main.cpp
tools/: strip-comments-go.go  strip-comments-kt.py
(+213 files in other folders)
